improving visibility issue of letter

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -108,7 +108,7 @@ p{
     width: 90%;
     height: auto;
     overflow-y: scroll;
-    background: #ffb8c8;
+    background: #ffffff;
     margin: 0 auto;
     padding-bottom: 10vh;
 }
